# m4opt-paper

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  m4opt.bib  m4opt.tex  pyproject.toml
.github/workflows/: build.yml
licenses/: LICENSES.txt
scripts/: O5HLVK.ecsv  O6HLVK.ecsv  area-distance.py  detection_probability.py  etc.py  events-ecsv.py  events-tex.py  events.py  exploration.ipynb  exptime-position.py  fov.py  nominal-roll.py  piecewise-linear-exptime.py  plan-table.py  plan_args.asdf  plots.py  prob-exptime.py  rate_stats.py  selected-detected.py  skygrid.py  slew.py  slurm-schedule-absmag-dstn.py  slurm-schedule-absmag-fixed.py  submit.py  unpack-observing-scenarios.py
tables/: 3628.tex  events.ecsv  events.tex  example.tex  selected-detected.tex
