[project]
name = "m4opt-paper"
description = "UVEX EMGW M4OPT paper"
authors = [
    {name = "Leo Singer",email = "leo.p.singer@nasa.gov"}
]
# FIXME: CPLEX does not yet support Python 3.12 and newer.
# See https://ibm-data-and-ai.ideas.ibm.com/ideas/CPLEX-I-148
requires-python = ">=3.11, <3.12"
dependencies = [
    # FIXME: The latest version of CPLEX on PyPI does not yet support macOS. Remove this when fixed.
    # See https://www.ibm.com/mysupport/s/defect/aCIKe000000bpzJ/dt421849?language=en_US
    "cplex < 22.1.2",
    "m4opt",
    "dask-jobqueue",
    "dask[diagnostics]",
    "ipython",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.codespell]
ignore-words-list = """
    multline,
    ToO,
    ToOs,
"""
skip = """
    m4opt.bib,
    poetry.lock,
"""
